--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,10 +1,22 @@
 {% extends 'base.html' %}
 
-{% block title %}Edit Movies{% endblock %}
+{% block title %}Edit Movie{% endblock %}
 
 {% block content %}
-<div class="content">
-  <h1 class="heading">Movie Title</h1>
-    <p class="description">Edit Movie Rating</p>
-  </div>
+<div class="container">
+    <h1 class="heading">Edit Movie: {{ movie.title }}</h1>
+    <form method="POST">
+        {{ form.hidden_tag() }}
+        <div class="form-group">
+            <label for="rating">Rating</label>
+            {{ form.rating(class="form-control") }}
+        </div>
+        <div class="form-group">
+            <label for="review">Review</label>
+            {{ form.review(class="form-control") }}
+        </div>
+        {{ form.submit(class="btn btn-primary") }}
+    </form>
+</div>
 {% endblock %}
+
