--- a/templates/add.html
+++ b/templates/add.html
@@ -3,7 +3,17 @@
 {% block title %}Add Movie{% endblock %}
 
 {% block content %}
-<div class="content">
+<div class="container">
     <h1 class="heading">Add a Movie</h1>
+    <form action="{{ url_for('add_movie') }}" method="post">
+        {{ form.hidden_tag() }}
+        <div class="form-group">
+            <label for="title">Movie Title:</label>
+            {{ form.title(class="form-control") }}
+        </div>
+        <div class="form-group">
+            {{ form.submit(class="btn btn-primary") }}
+        </div>
+    </form>
 </div>
 {% endblock %}
