--- a/templates/select.html
+++ b/templates/select.html
@@ -1,12 +1,16 @@
 {% extends 'base.html' %}
 
+{% block title %}Select Movie{% endblock %}
+
 {% block content %}
 <div class="container">
-    <h1>Select a Movie</h1>
+    <h1 class="heading">Select a Movie</h1>
     <ul>
     {% for movie in movies %}
         <li>
-            <a href="{{ url_for('add_movie_details', movie_id=movie.id) }}">{{ movie.title }} ({{ movie.release_date.split('-')[0] }})</a>
+            <a href="{{ url_for('add_movie_details', movie_id=movie['id']) }}">
+                {{ movie['title'] }} ({{ movie['release_date'].split('-')[0] if movie['release_date'] else 'Unknown' }})
+            </a>
         </li>
     {% endfor %}
     </ul>
