--- a/templates/index.html
+++ b/templates/index.html
@@ -18,13 +18,13 @@
                 <p class="review">{{ movie.review }}</p>
                 <p class="overview">{{ movie.description }}</p>
                 <a href="{{ url_for('edit_movie', movie_id=movie.id) }}" class="button">Edit</a>
-                <a href="{{ url_for('delete_movie', movie_id=movie.id) }}" class="button delete-button">Delete</a>
+                <a href="{{ url_for('delete_movie', movie_id=movie.id) }}" class="button">Delete</a>
             </div>
         </div>
     </div>
     {% endfor %}
     <div class="container text-center add">
-        <a href="{{ url_for('add_movie') }}" class="button">Add Movie</a>
+        <a href="{{ url_for('add_movie') }}" class="button add-movie-button">Add Movie</a>
     </div>
 </div>
 {% endblock %}
